--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "learnig-flex-box-and-grid",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://ayabongaqwabi.github.io/learning-flexbox-and-grid",
   "dependencies": {
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
@@ -17,6 +18,11 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.0"
   }
 }
